noinst_LIBRARIES = lib_kazusa.a
lib_kazusa_a_CFLAGS  = -I../include $(CFLAGS)
lib_kazusa_a_SOURCES = optparse.c \
											 config.c \
											 signal.c \
											 queue.c \
											 daemon.c \
											 logger.c \
											 connection.c \
											 stomp_proto_send.c \
											 stomp_proto_connect.c \
											 stomp_proto_subscribe.c \
											 stomp_proto_ack.c \
											 stomp_proto_unsubscribe.c \
											 stomp_worker_management.c \
											 stomp.c
