noinst_LIBRARIES = lib_newt.a
lib_newt_a_CFLAGS  = -I../include $(CFLAGS)
lib_newt_a_SOURCES = optparse.c \
                     config.c \
                     signal.c \
                     queue.c \
                     daemon.c \
                     logger.c \
                     connection.c \
                     transaction.c \
                     stomp_proto_send.c \
                     stomp_proto_connect.c \
                     stomp_proto_subscribe.c \
                     stomp_proto_ack.c \
                     stomp_proto_nack.c \
                     stomp_proto_unsubscribe.c \
                     stomp_proto_begin.c \
                     stomp_proto_abort.c \
                     stomp_proto_commit.c \
                     stomp_worker_management.c \
                     stomp.c
